--- a/views/email.handlebars
+++ b/views/email.handlebars
@@ -1,4 +1,3 @@
-// email.handlebars
 <!DOCTYPE html>
 <html>
 <head>
@@ -7,12 +6,15 @@
   <title>Email</title>
   <style>
   h2 {
-    color: #c4c4c4;
+    color: #000000;
   }
 </style>
 </head>
 <body>
-  <h2>Hello {{name}}! </h2>
-  <p>We're glad to have you on board at {{company}}. </p>
+  <h2>Bonjour {{name}}! </h2>
+<p>Votre mot de passe a été re-initlaisé, le nouveau mot de passe est :<br />
+
+Nouveau mot de passe : <strong>{{mdp}}</strong></p>
+   
 </body>
 </html>
