--- a/views/email.handlebars
+++ b/views/email.handlebars
@@ -12,7 +12,7 @@
 </head>
 <body>
   <h2>Bonjour {{name}}! </h2>
-<p>Votre mot de passe a été re-initlaisé, le nouveau mot de passe est :<br />
+<p>Votre mot de passe a été re-initlaisé :<br />
 
 Nouveau mot de passe : <strong>{{mdp}}</strong></p>
    
